--- a/freelancer_inicio/index.html
+++ b/freelancer_inicio/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diseñador Freelancer</title>
+    <link rel="preload" href="css/styles.css" as="style">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -120,7 +122,7 @@
                 <div>
                     <input type="submit" value="Enviar">
                 </div>
-                
+
             </fieldset>
         </form>
     </section>
