--- a/FrontEndStore/nosotros.html
+++ b/FrontEndStore/nosotros.html
@@ -37,7 +37,7 @@
     </main>
 
     <section class="contenedor comprar">
-        <h2 class="comprar__titulo">Por que comprar con nosotros?</h2>
+        <h2 class="comprar__titulo">¿Por qué comprar con nosotros?</h2>
 
         <div class="bloques">
             <div class="bloque">
@@ -67,7 +67,7 @@
     </section>
 
     <footer class="footer">
-        <p class="footer__texto">Front End Stores - Todos los derechos Reservados 2023.</p>
+        <p class="footer__texto">Front End Store - Todos los derechos Reservados 2023.</p>
     </footer>
 </body>
 </html>
