--- a/FrontEndStore/producto.html
+++ b/FrontEndStore/producto.html
@@ -24,6 +24,27 @@
 
     <main class="contenedor">
         <h1>React JS</h1>
+
+        <div class="camisa">
+            <img class="camisa__imagen" src="img/3.jpg" alt="imagen del producto">
+
+            <div class="camisa__contenido">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis excepturi cum, voluptatibus accusamus, reprehenderit soluta vero enim unde delectus est blanditiis velit repellendus dignissimos non necessitatibus nobis, vitae animi voluptatum!</p>
+                
+                <form class="formulario">
+                    <select class="formulario__campo">
+                        <option disabled selected value="">-- Seleccionar Talla --</option>
+                        <option value="">Chica</option>
+                        <option value="">Mediana</option>
+                        <option value="">Grnade</option>
+                    </select>
+
+                    <input class="formulario__campo" type="number" placeholder="Cantidad" min="1">
+
+                    <input class="formulario__submit" type="submit" value="Agregar al Carrito" class="boton boton--primario">
+                </form>
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
